fix(nav): color dark mode / light mode

--- a/src/scss/core/reset.scss
+++ b/src/scss/core/reset.scss
@@ -4,7 +4,6 @@ html {
   word-break: normal;
   -moz-tab-size: 4;
   tab-size: 4;
-  background-color: #FAF9F9 !important;
 }
 
 *,
