--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,2 @@
-
-$btn-font-weight: 5000px;
 @import '~vuetify/src/styles/styles.sass';
+
